fixed grid-wrap names +added querty for desktops

--- a/src/code/styles.css
+++ b/src/code/styles.css
@@ -90,15 +90,12 @@ body {
     /*  I can set the footer margin-top:auto and 
     with min-height 100vh on the parent of the footer I can
     stick the footer at the bottom of the page* 
-    The margin auto makes it so that the footer constantly
+    The margin auto (that I use in the footer)makes it 
+    so that the footer constantly
     has maximum margin space */
     min-height: 100vh;
     display: grid;
     gap: 20px;
-    grid-template-areas:
-        "main_header"
-        "main_content"
-        "main_footer";
 }
 
 #main_header {
@@ -107,7 +104,7 @@ body {
     display flex+column wrap is because I want vertical
     positioning in our header
     (logo+nav-bar above the banner) */
-    grid-area: "main_header";
+    grid-area: header;
     display: flex;
     flex-flow: column wrap;
 
@@ -116,7 +113,7 @@ body {
 #main_content {
     /* I gave this class the grid-area main_content
     for it to be recognized from the grid_wrap I used on all the body */
-    grid-area: "main_content";
+    grid-area: content;
 }
 
 
@@ -449,7 +446,7 @@ body {
     sticks at the bottom*/
     background-color: var(--footer-color);
     margin-top: auto;
-    grid-area: "main_footer";
+    grid-area: footer;
 }
 
 
@@ -1185,9 +1182,15 @@ th {
     Any container I used grid on
     I want it to be displayed as 1 column*/
 
-    #grid_wrapper{
-        /* fill in the grid properties 
-        for the main grid*/
+    #grid_wrap{
+        /* this is the grid for the phone-view
+        it is a one column grid that*/
+        display: grid;
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+        "header"
+        "content"
+        "footer";
     }
 
     .index_nav_2>ul{
@@ -1254,9 +1257,15 @@ th {
     Any container I used grid on
     I want it to be displayed as 1 column*/
 
-    #grid_wrapper{
+    #grid_wrap{
         /* fill in the grid properties 
         for the main grid*/
+        display: grid;
+        grid-template-columns: 1fr 2fr;
+        grid-template-areas: 
+        "header header"
+        "content content"
+        "footer footer";
     }
 
     .index_nav_2>ul{
@@ -1307,6 +1316,16 @@ th {
 
 }
 
+
+@media (min-width:1300px){
+    #grid_wrap{
+        grid-template-columns: 1fr 3fr 1fr;
+        grid-template-areas:
+        "header     header    header"
+        "content    content    content"
+        "footer     footer     footer";
+    }
+}
 
 
 
